# subway-sign

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  config.example.json  deploy.example.sh  requirements.txt  run.py
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  claude-code-review.yml  dependabot-automerge.yml
assets/: mta_stations_complete.json  route_icon_metadata.json
assets/fonts/: license.txt  mta-sign.json  readme.txt
assets/icons/: route_icon_metadata.json
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md
scripts/: pi-self-update.sh
src/: __init__.py  config.rs  main.py  main.rs  models.rs
src/display/: __init__.py  colors.py  colors.rs  fonts.py  fonts.rs  framebuffer.rs  matrix.rs  mod.rs  renderer.py  renderer.rs
src/mta/: __init__.py  alert_manager.py  alerts.rs  client.py  client.rs  feeds.rs  mock_client.py  mod.rs  models.py  station_lookup.py  stations.rs
src/web/: handlers.rs  server.rs
systemd/: subway-sign-rust.service.example  subway-sign-update.service  subway-sign-update.timer  subway-sign.service.example  subway-web.service.example
tools/: compare_fonts.py  icon_designer.py  validate_stations.py
web/: app.py
web/static/: manifest.json  service-worker.js  style.css
web/templates/: index.html
